<resources>
    <string name="app_name">TestGooglePlaces</string>
    <string name="title_activity_maps">Map</string>
    <string name="server_unavailable">Сервер недоступен</string>
    <string name="no_places">По данному фильтру мест рядом не найдено</string>
    <string name="unknown_error">Произошла ошибка</string>
    <string name="gps_not_enabled">Для корректной работы необходимо включить GPS</string>
    <string name="not_permission">Для корректной работы необходимо разрешение</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="pending_intent_unable_to_execute_request">PendingIntent unable to execute request.</string>
    <string name="route_unavailable">Маршрут недоступен</string>
    <string name="route_error">Ошибка при получении маршрута</string>
    <string name="internet_unavailable">Интернет недоступен</string>
    <string name="error_unknown">Произошла неизвестная ошибка</string>
    <string name="search_places">Поиск</string>
    <string name="florist">ЦМ</string>
    <string name="gas_station">АЗС</string>
    <string name="cafe">Кафе</string>
    <string name="school">Школы</string>
</resources>
