<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_type_school"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/school"
        android:tag="school"
        android:background="@color/colorWhite"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintEnd_toStartOf="@id/cb_type_cafe"
        map:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_type_cafe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cafe"
        android:tag="cafe"
        android:background="@color/colorWhite"
        map:layout_constraintStart_toEndOf="@+id/cb_type_school"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_type_gas_station"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/gas_station"
        android:tag="gas_station"
        android:background="@color/colorWhite"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/cb_type_school"
        map:layout_constraintEnd_toStartOf="@+id/cb_type_florist"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_type_florist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/florist"
        android:tag="florist"
        android:background="@color/colorWhite"
        map:layout_constraintStart_toEndOf="@id/cb_type_gas_station"
        map:layout_constraintTop_toBottomOf="@id/cb_type_cafe"
        map:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_show_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        map:layout_constraintTop_toBottomOf="@+id/cb_type_gas_station"
        map:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorWhite"
        android:text="@string/search_places"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/btn_show_places"
        tools:context=".ui.activity.MapsActivity" />

    <include
        android:id="@+id/progress"
        android:visibility="gone"
        layout="@layout/progress_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>